2008-10-21  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extBuffer.ml*: [add_channel], [output_buffer], [add_input] rewored to get rid of channels

	* src/core/extlib/extStream.mli: [of_channel], [on_channel] removed

	* src/main/threads/batteries.ml: [Standard] not included anymore

	* src/main/nothreads/batteries.ml: [Standard] not included anymore

	* src/core/batteries_core.ml: [Standard] is now [Extlib.ExtPervasives.Pervasives]

	* src/core/extlib/extPervasives.mli: added parts of [Enum]

	* src/core/extlib/option.ml*: [print] added

	* src/core/extlib/multiPMap.ml*: [print] added

	* src/core/extlib/lazyList.ml*: [print] added

	* src/core/extlib/extHashtbl.ml*: [print] added

	* src/core/extlib/extBuffer.ml*: in [print], removed optional arguments

	* src/core/extlib/dynArray.ml*: [print] added

	* src/core/extlib/enum.ml*: in [print], put optional arguments first

	* src/core/extlib/dllist.ml*: [print] added

	* src/core/extlib/bitSet.ml*: in [print], removed optional arguments

	* src/core/extlib/extList.ml*: in [print], put optional arguments first

	* src/core/extlib/extArray.ml*: in [Cap], added [print], [of_sexp], [to_sexp]

	* src/core/extlib/extArray.ml*: in [print], put optional arguments first

	* src/core/extlib/extPervasives.ml*: [input_value] added, [output_value] now [ExtMarshal.Marshal.output]

	* src/core/extlib/extMarshal.ml*: created

	* src/main/nothreads/batteries.mllib: [Pervasives], [Buffer], [Complex], [Big_int], [Num], [Printf], [Stream], [Int64], [Int32] removed

	* src/core/batteries_core.ml: [ExtPervasives.Pervasives] replaced with [Extlib.Extpervasives.Pervasives]

	* Makefile: in [install], added [IO.cmi], [innerIO.cmi], [toolchain.cmi]
	
	* src/core/extlib.mlpack: [ExtPervasives] added

	* src/core/extlib/extUChar.mli: in [of_digit], fixed [@raise]

2008-10-20  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/batteries_core.ml: [Standard] now contains [ExtPervasives.Pervasives]
